prod/school/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: school
  template:
    metadata:
      labels:
        app: school
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: school
        image: 100xdevs/school:2aff9009d282e59020614f48ddd3aa99b7011230
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: secret
          mountPath: /app/.env
          subPath: .env
      volumes:
      - name: secret
        secret:
          secretName: school-secrets
          items:
          - key: .env
            path: .env
---
apiVersion: v1
kind: Service
metadata:
  name: school
  namespace: default
spec:
  selector:
    app: school
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
