prod/school/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: school-postgres
  template:
    metadata:
      labels:
        app: school-postgres
    spec:
      containers:
        - name: postgres
          image: 'postgres:14'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              subPath: postgres-data
              name: postgresdata
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: school-postgres-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: school-postgres
  labels:
    app: school-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: school-postgres
