prod/school/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - school.100xdevs.com
      secretName: school-tls
  rules:
    - host: school.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: school
                port:
                  number: 80
